Dropdown: Fix RTL alignment issue

--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -208,6 +208,7 @@
         &[x-placement] {
             right: auto;
             bottom: auto;
+            left: auto;
         }
     }
 
